# cmd/api/users.go
@@ -3,7 +3,6 @@ package main
 import (
 	"context"
 	"errors"
-	"fmt"
 	"net/http"
 	"strconv"
 
@@ -14,10 +13,6 @@ import (
 type userKey string
 
 const userCtx userKey = "user"
-
-type AuthUser struct {
-	UserID int64 `json:"user_id" validate:"required"`
-}
 
 // GetUser godoc
 //
@@ -35,7 +30,7 @@ type AuthUser struct {
 //	@Router			/users/{id}	[get]
 func (app *application) getUserHandler(w http.ResponseWriter, r *http.Request) {
 	user := getUserFromContext(r)
-	if err := jsonResponse(w, http.StatusCreated, user); err != nil {
+	if err := jsonResponse(w, http.StatusOK, user); err != nil {
 		app.internalServerError(w, r, err)
 	}
 }
@@ -56,20 +51,10 @@ func (app *application) getUserHandler(w http.ResponseWriter, r *http.Request) {
 //	@security		ApiKeyAuth
 //	@Router			/users/{id}/follow	[put]
 func (app *application) followUserHandler(w http.ResponseWriter, r *http.Request) {
-	followerUser := getUserFromContext(r)
-
-	// TODO: Revert back to auth userID using ctx
-	var payload AuthUser
-	if err := readJSON(w, r, &payload); err != nil {
-		app.badRequestResponse(w, r, err)
-	}
-	if err := Validate.Struct(payload); err != nil {
-		app.badRequestResponse(w, r, err)
-		return
-	}
-	fmt.Println(followerUser.ID)
+	followedUser := getUserFromContext(r)
+	authUser := getAuthUserFromContext(r)
 	ctx := r.Context()
-	err := app.store.Followers.Follow(ctx, followerUser.ID, payload.UserID)
+	err := app.store.Followers.Follow(ctx, followedUser.ID, authUser.ID)
 	if err != nil {
 		switch err {
 		case store.ErrorConflict:
@@ -81,47 +66,63 @@ func (app *application) followUserHandler(w http.ResponseWriter, r *http.Request
 		}
 	}
 
-	if err := jsonResponse(w, http.StatusNoContent, followerUser); err != nil {
+	if err := jsonResponse(w, http.StatusCreated, followedUser); err != nil {
 		app.internalServerError(w, r, err)
 		return
 	}
 }
 
-// UnfollowUser godoc
-//
-//	@Summary		Unfollow a user profile
-//	@Description	Unfollow a user profile by ID
-//	@Tags			users
-//	@Accept			json
-//	@Produce		json
-//	@Param			id	path		int		true	"User ID"
-//	@Success		204	{string}	string	"User unfollowed"
-//	@Failure		400	{object}	error	"Bad request"
-//	@Failure		404	{object}	error	"User not found"
-//	@Failure		500	{object}	error	"Somehting went wrong"
-//	@security		ApiKeyAuth
-//	@Router			/users/{id}/unfollow	[put]
+// @Summary		Unfollow a user profile
+// @Description	Unfollow a user profile by ID
+// @Tags			users
+// @Accept			json
+// @Produce		json
+// @Param			id	path		int		true	"User ID"
+// @Success		204	{string}	string	"User unfollowed"
+// @Failure		400	{object}	error	"Bad request"
+// @Failure		404	{object}	error	"User not found"
+// @Failure		500	{object}	error	"Somehting went wrong"
+// @security		ApiKeyAuth
+// @Router			/users/{id}/unfollow	[put]
 func (app *application) unfollowUserHandler(w http.ResponseWriter, r *http.Request) {
-	unfollowedUser := getUserFromContext(r)
-
-	// TODO: Revert back to auth userID using ctx
-	var payload AuthUser
-	if err := readJSON(w, r, &payload); err != nil {
-		app.badRequestResponse(w, r, err)
-	}
-	if err := Validate.Struct(payload); err != nil {
-		app.badRequestResponse(w, r, err)
-		return
-	}
-
+	followerUser := getUserFromContext(r)
+	authUser := getAuthUserFromContext(r)
 	ctx := r.Context()
-	err := app.store.Followers.Unfollow(ctx, unfollowedUser.ID, payload.UserID)
+	err := app.store.Followers.Unfollow(ctx, followerUser.ID, authUser.ID)
 	if err != nil {
 		app.internalServerError(w, r, err)
 		return
 	}
 
-	if err := jsonResponse(w, http.StatusNoContent, unfollowedUser); err != nil {
+	if err := jsonResponse(w, http.StatusCreated, followerUser); err != nil {
+		app.internalServerError(w, r, err)
+	}
+}
+
+// @Summary		activate user
+// @Description	Activates/Register a user by invitation token
+// @Tags			users
+// @Produce		json
+// @Param			token	path		string	true	"Invitation token"
+// @Success		204		{string}	string	"User activated"
+// @Failure		400		{object}	error	"Bad request"
+// @Failure		404		{object}	error	"User not found"
+// @Failure		500		{object}	error	"Somehting went wrong"
+// @security		ApiKeyAuth
+// @Router			/users/activate/{token} [put]
+func (app *application) activateUserHandler(w http.ResponseWriter, r *http.Request) {
+	token := chi.URLParam(r, "token")
+	err := app.store.Users.Activate(r.Context(), token)
+	if err != nil {
+		switch err {
+		case store.ErrorNotFound:
+			app.badRequestResponse(w, r, err)
+		default:
+			app.internalServerError(w, r, err)
+		}
+		return
+	}
+	if err := jsonResponse(w, http.StatusNoContent, ""); err != nil {
 		app.internalServerError(w, r, err)
 	}
 }
@@ -134,7 +135,7 @@ func (app *application) userContextMiddleware(next http.Handler) http.Handler {
 			app.internalServerError(w, r, err)
 			return
 		}
-		user, err := app.store.Users.GetById(r.Context(), userId)
+		user, err := app.getUser(r.Context(), userId)
 		if err != nil {
 			switch {
 			case errors.Is(err, store.ErrorNotFound):
